--- a/styles.css
+++ b/styles.css
@@ -82,17 +82,17 @@ button{
 	border-radius: 10;
 }
 @-webkit-keyframes save{
-	0% { color: #f22626; opacity: 1;}
-	10% { color: #f22626; opacity: 0.9; }
-	20% { color:#f22626; opacity: 0.8;}
-	30% {color:#f22626; opacity: 0.7;}
-	40% { color:#f22626; opacity: 0.6;}
-	50% { color:#f22626; opacity: 0.5;}
-	60% { color:#f22626; opacity: 0.4;}
-	70% { color:#f22626; opacity: 0.3;}
-	80% { color:#f22626; opacity: 0.2}
-	90% { color:#f22626; opacity: 0.1}
-	100% { color:#f22626; opacity: 0.6}a
+	0% { color: #63ff4f; opacity: 1;}
+	10% { color: #63ff4f; opacity: 0.9; }
+	20% { color:#63ff4f; opacity: 0.8;}
+	30% {color:#63ff4f; opacity: 0.7;}
+	40% { color:#63ff4f; opacity: 0.6;}
+	50% { color:#63ff4f; opacity: 0.5;}
+	60% { color:#63ff4f; opacity: 0.4;}
+	70% { color:#63ff4f; opacity: 0.3;}
+	80% { color:#63ff4f; opacity: 0.2}
+	90% { color:#63ff4f; opacity: 0.1}
+	100% { color:#63ff4f; opacity: 0.6}
 }
 @-webkit-keyframes warning{
 	0% { color: #f22626; opacity: 1;}
@@ -106,4 +106,7 @@ button{
 	80% { color:#f22626; opacity: 0.2}
 	90% { color:#f22626; opacity: 0.1}
 	100% { color:#f22626; opacity: 0.6}
+}
+#aoc{
+	ali
 }
