--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,17 @@
 animation:rainbow 2.5s infinite;
 }
 @-webkit-keyframes rainbow {
-0% {color: #ff0000;}
-10% {color: #ff8000;}
-20% {color: #ffff00;}
-30% {color: #80ff00;}
-40% {color: #00ff00;}
-50% {color: #00ff80;}
-60% {color: #00ffff;}
-70% {color: #0080ff;}
-80% {color: #0000ff;}
-90% {color: #8000ff;}
-100% {color: #ff0080;}
+0% {color: #af0000;}
+10% {color: #fa8000;}
+20% {color: #0f0f00;}
+30% {color: #60fd00;}
+40% {color: #00fa00;}
+50% {color: #00fa60;}
+60% {color: #00fafa;}
+70% {color: #0060fa;}
+80% {color: #0000fa;}
+90% {color: #6000fa;}
+100% {color: #ff0060;}
 }
 @-ms-keyframes rainbow {
 0% {color: #ff0000;}
@@ -60,7 +60,7 @@ animation:rainbow 2.5s infinite;
 /* The rest is my code <3, but it you can modify it to your liking :D*/
 body{
   text-align: center;
-  background-color: #4c4c4c;
+  background-color: #ffffff;
 }
 input{
 	color:black;
